--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "mongodb": "^4.2.2",
     "promise-mysql": "^5.0.4"
   }
 }
